chore: Update tasks state

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -1,37 +1,14 @@
 [
   {
-    "id": "task-1763805481491-c23e78",
-    "name": "CodexCLI1: /Users/takamasa/Downloads/ll.mp4　この動画をビデオコンテンツにうまく格納して欲しい。\n紹介も文字は下記を参考にしてUIを整えて。\n久しぶりの芝犬ドギーダンス🐕🎶\n@Hailuo_AI\n \n\nHailuo2.3はダンスがかなり良くなったね😆\n\nMidjourneyとnanobananaで画像生成後にHailuoでi2v\nSunoで作った音に合わせて完成🎥",
-    "model": "Codex CLI",
-    "status": "running",
-    "importance": "medium",
-    "urgency": "medium",
-    "createdAt": "2025-11-22T09:58:01.491Z",
-    "updatedAt": "2025-11-22T10:04:44.146Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1763805481491-c23e78",
-    "baseBranch": "main",
-    "useTmux": true,
-    "aiCompetitionEntry": true,
-    "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1763805481491-5sv0l4ci",
-    "aiCompetitionGroupName": "/Users/takamasa/Downloads/ll.mp4　この動画をビデオコンテンツにうまく格納して欲しい。\n紹介も文字は下記を参考にしてUIを整えて。\n久しぶりの芝犬ドギーダンス🐕🎶\n@Hailuo_AI\n \n\nHailuo2.3はダンスがかなり良くなったね😆\n\nMidjourneyとnanobananaで画像生成後にHailuoでi2v\nSunoで作った音に合わせて完成🎥",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1763805481491-c23e78"
-  },
-  {
     "id": "task-1763805486991-9d2273",
     "name": "ClaudeCode1: /Users/takamasa/Downloads/ll.mp4　この動画をビデオコンテンツにうまく格納して欲しい。\n紹介も文字は下記を参考にしてUIを整えて。\n久しぶりの芝犬ドギーダンス🐕🎶\n@Hailuo_AI\n \n\nHailuo2.3はダンスがかなり良くなったね😆\n\nMidjourneyとnanobananaで画像生成後にHailuoでi2v\nSunoで作った音に合わせて完成🎥",
     "model": "Claude Code",
-    "status": "running",
+    "status": "completed",
     "importance": "medium",
     "urgency": "medium",
     "createdAt": "2025-11-22T09:58:06.991Z",
-    "updatedAt": "2025-11-22T10:03:33.197Z",
-    "requiresTerminal": true,
+    "updatedAt": "2025-11-22T10:32:19.695Z",
+    "requiresTerminal": false,
     "createWorktree": true,
     "branchName": "task/task-1763805486991-9d2273",
     "baseBranch": "main",
@@ -43,41 +20,52 @@
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1763805486991-9d2273"
+    "worktreePath": null
   },
   {
-    "id": "task-1763805489747-6f0b72",
-    "name": "🔍Monitor: /Users/takamasa/Downloads/ll.mp4　この動画をビデオコンテンツにうまく格納して欲しい。\n紹介も文字は下記を参考にしてUIを整えて。\n久しぶりの芝犬ドギーダンス🐕🎶\n@Hailuo_AI\n \n\nHailuo2.3はダンスがかなり良くなったね😆\n\nMidjourneyとnanobananaで画像生成後にHailuoでi2v\nSunoで作った音に合わせて完成🎥",
-    "model": "codex",
-    "status": "working",
+    "id": "task-1763862511981-5146fc",
+    "name": "CodexCLI1: /Users/takamasa/Desktop/_202511231006_y2dqg.mp4　この動画をVideoコンテンツの最新に組み込んでください。紹介文は下記を参考に。飼い主のいない夜、猫たちは密かに集会を開くらしい。🍊🌃\n\nこたつでぬくぬくしていたはずが、気づけば異次元のパーティーフロアへ…😺✨\nネオンが弾け、ダンスはキレッキレ😹\n\nWorkflow\n🖼 Midjourney（Base Gen）\n🛠 NanobananaPro（Arrange）\n🎥 Veo 3.1（Image to Video）",
+    "model": "Codex CLI",
+    "status": "running",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-11-22T09:58:09.747Z",
-    "updatedAt": "2025-11-22T09:58:09.747Z",
+    "createdAt": "2025-11-23T01:48:31.981Z",
+    "updatedAt": "2025-11-23T01:55:26.322Z",
     "requiresTerminal": true,
     "createWorktree": true,
-    "branchName": "task/task-1763805489747-6f0b72",
+    "branchName": "task/task-1763862511981-5146fc",
     "baseBranch": "main",
     "useTmux": true,
-    "aiCompetitionEntry": false,
+    "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1763805481491-5sv0l4ci",
-    "aiCompetitionGroupName": "/Users/takamasa/Downloads/ll.mp4　この動画をビデオコンテンツにうまく格納して欲しい。\n紹介も文字は下記を参考にしてUIを整えて。\n久しぶりの芝犬ドギーダンス🐕🎶\n@Hailuo_AI\n \n\nHailuo2.3はダンスがかなり良くなったね😆\n\nMidjourneyとnanobananaで画像生成後にHailuoでi2v\nSunoで作った音に合わせて完成🎥",
-    "aiCompetitionMonitor": true,
-    "monitorTargets": [
-      "task-1763805481491-c23e78",
-      "task-1763805484209-3260a4",
-      "task-1763805486991-9d2273"
-    ],
-    "scoringConfig": {
-      "auditEnabled": false,
-      "auditPrompt": "",
-      "enabled": true,
-      "prompt": "UI",
-      "rubric": "medals",
-      "model": "codex"
-    },
-    "autoEvaluationNotBefore": 1763805541491,
-    "worktreePath": ".worktrees/task-1763805489747-6f0b72"
+    "aiCompetitionGroupId": "comp-1763862511980-g4zyde7d",
+    "aiCompetitionGroupName": "/Users/takamasa/Desktop/_202511231006_y2dqg.mp4　この動画をVideoコンテンツの最新に組み込んでください。紹介文は下記を参考に。飼い主のいない夜、猫たちは密かに集会を開くらしい。🍊🌃\n\nこたつでぬくぬくしていたはずが、気づけば異次元のパーティーフロアへ…😺✨\nネオンが弾け、ダンスはキレッキレ😹\n\nWorkflow\n🖼 Midjourney（Base Gen）\n🛠 NanobananaPro（Arrange）\n🎥 Veo 3.1（Image to Video）",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees/task-1763862511981-5146fc"
+  },
+  {
+    "id": "task-1763862514858-da732f",
+    "name": "ClaudeCode1: /Users/takamasa/Desktop/_202511231006_y2dqg.mp4　この動画をVideoコンテンツの最新に組み込んでください。紹介文は下記を参考に。飼い主のいない夜、猫たちは密かに集会を開くらしい。🍊🌃\n\nこたつでぬくぬくしていたはずが、気づけば異次元のパーティーフロアへ…😺✨\nネオンが弾け、ダンスはキレッキレ😹\n\nWorkflow\n🖼 Midjourney（Base Gen）\n🛠 NanobananaPro（Arrange）\n🎥 Veo 3.1（Image to Video）",
+    "model": "Claude Code",
+    "status": "running",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-11-23T01:48:34.858Z",
+    "updatedAt": "2025-11-23T01:55:17.768Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1763862514858-da732f",
+    "baseBranch": "main",
+    "useTmux": true,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1763862511980-g4zyde7d",
+    "aiCompetitionGroupName": "/Users/takamasa/Desktop/_202511231006_y2dqg.mp4　この動画をVideoコンテンツの最新に組み込んでください。紹介文は下記を参考に。飼い主のいない夜、猫たちは密かに集会を開くらしい。🍊🌃\n\nこたつでぬくぬくしていたはずが、気づけば異次元のパーティーフロアへ…😺✨\nネオンが弾け、ダンスはキレッキレ😹\n\nWorkflow\n🖼 Midjourney（Base Gen）\n🛠 NanobananaPro（Arrange）\n🎥 Veo 3.1（Image to Video）",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees/task-1763862514858-da732f"
   }
 ]
