chore: Update tasks state

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -465,11 +465,11 @@
     "id": "task-1764052324933-34bcd0",
     "name": "ClaudeCode1: Aboutの詳細ページを作り下記を挿入してください。\nAbout / イトパンについて\n開発 × クリエイティブ × 生成AIで、 「こうなったら面白い」を形にしていく イトパン（伊藤貴將）です。\n長野・北アルプス山麓を拠点に、 コード／デザイン／映像／文章／体験設計を行き来しながら、 生成AIを前提にしたものづくりとワークフローづくりをしています。\n\n私の考え方（Philosophy）\n1. 身銭と時間をつぎ込んで見えてきた「自分なりのAI」\n22.9〜画像生成AI、24年は動画生成、25年はAIエージェント／MCP・ワークフローにフルベット。 新しいモデルやツールが出るたびに、自腹でクレジットを溶かし続け、 仕事以外のほとんどの時間を、AIの検証と実験に注いできました。\n* このモデルはどこまで使えるか\n* どこがまだツラいのか\n* 現場で気持ちよく回る組み合わせは何か\nを、自分の手で確かめ続けてきた結果、 ここ最近になってようやく、AIそのものが仕事になる案件が少しずつ増えてきています。\nだからこそ今は、 「自分が試してきたこと」をただ披露するのではなく、\nその人・そのチームにとって、どんなAIの使い方がしっくりくるのか？\nを一緒に考え、**それぞれの「自分なりのAI活用スタイル」**を 一緒に見つけていく伴走役でありたいと思っています。\n\n2. 開発とクリエイティブのあいだを、行き来しやすくする\nエンジニアだけ、デザイナーだけ、ではなく、 コードも、デザインも、映像も、テキストも、 ゆるくまたいで触っていける状態をつくることに関心があります。\n* 「技術はわからないけど、世界観はある」\n* 「コードは書けるけど、表現のアイデアが浮かびにくい」\nそんな人たちが、生成AIを入り口に両側へ踏み出せるような橋渡しをしていきたい。\nプロのエンジニア／クリエイターだけのものにせず、 **“半歩ずつまたいでいける環境”と“回し方の型”**をつくる。 そのために、ワークフロー設計やプロンプトのレシピ化にも力を入れています。\n\n3. AIの「これからの使い方」を一緒にデザインする\nAIを「効率化ツール」として線を引いてしまうのではなく、\nこれから自分たちは、AIとどう付き合っていくのか？ どんな仕事の仕方・表現の仕方があり得るのか？\nを一緒に考え、言語化し、具体的な形に落としていく相棒だと捉えています。\n* 「AIは触っているけど、うまく活用できている実感がない」\n* 「自分たちなりのAI活用スタイルを整理したい」\nといった段階からでも大丈夫です。\nヒアリングと対話を通して、\n* どんなタスクをAIに任せるか\n* どこから先は人がやるのか\n* どんな未来の働き方・表現を目指したいのか\nといったところまで含めて、 **その人／そのチームに合った「これからのAIの使い方」**を一緒にデザインしていきます。\n\nお手伝いできること\n例えば、こんなテーマでご一緒できます。\n* 画像／動画／音楽モデルを組み合わせた 生成AI × 映像・Web・体験のプロトタイプ\n* 制作フローや業務フローに 生成AIを組み込むワークフロー設計\n* AIエージェントを使ってみたい／どんなことができるか知りたい方向けの相談・設計\n* 「こういうこと、AIでできる？」といった ラフなアイデアの壁打ち・検証プランづくり\n\nお仕事・コラボのご相談\n* AIエージェントやマルチモーダルな生成AIを試してみたい\n* 自社・自分の活動に、どんなAI活用の余地があるのか整理したい\n* 小さく検証できるプロジェクトから、一緒に組み立ててほしい\nといったご相談を歓迎しています。\n「まだぼんやりしているアイデア」や 「そもそも何から始めればいいかわからない」といった段階からでも大丈夫です。\n興味を持っていただけた方は、 本サイト内のリンク（X / Note / メールなど）から、 お気軽にご連絡ください。",
     "model": "Claude Code",
-    "status": "running",
+    "status": "working",
     "importance": "medium",
     "urgency": "medium",
     "createdAt": "2025-11-25T06:32:04.933Z",
-    "updatedAt": "2025-11-25T06:41:59.427Z",
+    "updatedAt": "2025-11-25T07:12:16.989Z",
     "requiresTerminal": true,
     "createWorktree": true,
     "branchName": "task/task-1764052324933-34bcd0",
