chore: update tasks state and model cache on main

--- a/.kamui/tasks-state.json
+++ b/.kamui/tasks-state.json
@@ -990,87 +990,15 @@
     "dependencies": []
   },
   {
-    "id": "task-1765591538052-db7477",
-    "name": "ClaudeCode2: 現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "model": "Claude Code",
-    "status": "running",
-    "importance": "medium",
-    "urgency": "medium",
-    "createdAt": "2025-12-13T02:05:38.052Z",
-    "updatedAt": "2025-12-13T02:05:40.577Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1765591538052-db7477",
-    "baseBranch": "main",
-    "useTmux": true,
-    "singleMode": false,
-    "aiCompetitionEntry": true,
-    "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1765591537451-zbyq3f48",
-    "aiCompetitionGroupName": "現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1765591538052-db7477"
-  },
-  {
-    "id": "task-1765591538252-f7eef4",
-    "name": "GeminiCLI1: 現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "model": "Gemini CLI",
-    "status": "running",
-    "importance": "medium",
-    "urgency": "medium",
-    "createdAt": "2025-12-13T02:05:38.252Z",
-    "updatedAt": "2025-12-13T02:05:39.593Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1765591538252-f7eef4",
-    "baseBranch": "main",
-    "useTmux": true,
-    "singleMode": false,
-    "aiCompetitionEntry": true,
-    "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1765591537451-zbyq3f48",
-    "aiCompetitionGroupName": "現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1765591538252-f7eef4"
-  },
-  {
-    "id": "task-1765591537452-80117b",
-    "name": "CodexCLI1: 現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "model": "Codex CLI",
-    "status": "running",
-    "importance": "medium",
-    "urgency": "medium",
-    "createdAt": "2025-12-13T02:05:37.452Z",
-    "updatedAt": "2025-12-13T02:05:39.442Z",
-    "requiresTerminal": true,
-    "createWorktree": true,
-    "branchName": "task/task-1765591537452-80117b",
-    "baseBranch": "main",
-    "useTmux": true,
-    "singleMode": false,
-    "aiCompetitionEntry": true,
-    "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1765591537451-zbyq3f48",
-    "aiCompetitionGroupName": "現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "aiCompetitionMonitor": false,
-    "monitorTargets": null,
-    "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1765591537452-80117b"
-  },
-  {
     "id": "task-1765591537852-220d63",
     "name": "ClaudeCode1: 現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
     "model": "Claude Code",
-    "status": "running",
+    "status": "completed",
     "importance": "medium",
     "urgency": "medium",
     "createdAt": "2025-12-13T02:05:37.852Z",
-    "updatedAt": "2025-12-13T02:05:40.392Z",
-    "requiresTerminal": true,
+    "updatedAt": "2025-12-13T04:22:34.476Z",
+    "requiresTerminal": false,
     "createWorktree": true,
     "branchName": "task/task-1765591537852-220d63",
     "baseBranch": "main",
@@ -1083,58 +1011,106 @@
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1765591537852-220d63"
+    "worktreePath": null,
+    "medal": "gold",
+    "aiCompetitionScore": 93
   },
   {
-    "id": "task-1765591537651-10841c",
-    "name": "CodexCLI2: 現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
-    "model": "Codex CLI",
+    "id": "task-1765600157492-043055",
+    "name": "ClaudeCode1: task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
+    "model": "Claude Code",
     "status": "running",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-12-13T02:05:37.651Z",
-    "updatedAt": "2025-12-13T02:05:40.217Z",
+    "createdAt": "2025-12-13T04:29:17.492Z",
+    "updatedAt": "2025-12-13T04:29:19.446Z",
     "requiresTerminal": true,
     "createWorktree": true,
-    "branchName": "task/task-1765591537651-10841c",
+    "branchName": "task/task-1765600157492-043055",
     "baseBranch": "main",
     "useTmux": true,
     "singleMode": false,
     "aiCompetitionEntry": true,
     "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1765591537451-zbyq3f48",
-    "aiCompetitionGroupName": "現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
+    "aiCompetitionGroupId": "comp-1765600157289-nbbuw6g1",
+    "aiCompetitionGroupName": "task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
     "aiCompetitionMonitor": false,
     "monitorTargets": null,
     "scoringConfig": null,
-    "worktreePath": ".worktrees/task-1765591537651-10841c"
+    "worktreePath": ".worktrees/task-1765600157492-043055"
   },
   {
-    "id": "task-1765591542583-f89ba9",
-    "name": "🔍Monitor: 現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
+    "id": "task-1765600157290-0811ce",
+    "name": "CodexCLI1: task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
+    "model": "Codex CLI",
+    "status": "running",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-13T04:29:17.290Z",
+    "updatedAt": "2025-12-13T04:29:19.251Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1765600157290-0811ce",
+    "baseBranch": "main",
+    "useTmux": true,
+    "singleMode": false,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1765600157289-nbbuw6g1",
+    "aiCompetitionGroupName": "task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees/task-1765600157290-0811ce"
+  },
+  {
+    "id": "task-1765600157692-8c90ef",
+    "name": "GeminiCLI1: task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
+    "model": "Gemini CLI",
+    "status": "running",
+    "importance": "medium",
+    "urgency": "medium",
+    "createdAt": "2025-12-13T04:29:17.692Z",
+    "updatedAt": "2025-12-13T04:29:19.073Z",
+    "requiresTerminal": true,
+    "createWorktree": true,
+    "branchName": "task/task-1765600157692-8c90ef",
+    "baseBranch": "main",
+    "useTmux": true,
+    "singleMode": false,
+    "aiCompetitionEntry": true,
+    "aiCompetitionResult": null,
+    "aiCompetitionGroupId": "comp-1765600157289-nbbuw6g1",
+    "aiCompetitionGroupName": "task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
+    "aiCompetitionMonitor": false,
+    "monitorTargets": null,
+    "scoringConfig": null,
+    "worktreePath": ".worktrees/task-1765600157692-8c90ef"
+  },
+  {
+    "id": "task-1765600161450-b642f4",
+    "name": "🔍Monitor: task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
     "model": "codex",
     "status": "running",
     "importance": "medium",
     "urgency": "medium",
-    "createdAt": "2025-12-13T02:05:42.583Z",
-    "updatedAt": "2025-12-13T02:05:43.281Z",
+    "createdAt": "2025-12-13T04:29:21.450Z",
+    "updatedAt": "2025-12-13T04:29:22.195Z",
     "requiresTerminal": true,
     "createWorktree": true,
-    "branchName": "task/task-1765591542583-f89ba9",
+    "branchName": "task/task-1765600161450-b642f4",
     "baseBranch": "main",
     "useTmux": true,
     "singleMode": false,
     "aiCompetitionEntry": false,
     "aiCompetitionResult": null,
-    "aiCompetitionGroupId": "comp-1765591537451-zbyq3f48",
-    "aiCompetitionGroupName": "現在の構成はかっこいいのですが、どうもやっぱり動きがもっさりしています。\nトップページなどはこの構造でいいのですが、それぞれの項目にクリックした時はもっとサクッとページが表示できるようにしたいのですが、アイデアを提案してください",
+    "aiCompetitionGroupId": "comp-1765600157289-nbbuw6g1",
+    "aiCompetitionGroupName": "task-1765591537852-220d63を実装したら全く何も表示されなくなったので調査し改善して",
     "aiCompetitionMonitor": true,
     "monitorTargets": [
-      "task-1765591537452-80117b",
-      "task-1765591538252-f7eef4",
-      "task-1765591537651-10841c",
-      "task-1765591537852-220d63",
-      "task-1765591538052-db7477"
+      "task-1765600157692-8c90ef",
+      "task-1765600157290-0811ce",
+      "task-1765600157492-043055"
     ],
     "scoringConfig": {
       "auditEnabled": false,
@@ -1144,7 +1120,7 @@
       "rubric": "medals",
       "model": "codex"
     },
-    "autoEvaluationNotBefore": 1765591597451,
-    "worktreePath": ".worktrees/task-1765591542583-f89ba9"
+    "autoEvaluationNotBefore": 1765600217289,
+    "worktreePath": ".worktrees/task-1765600161450-b642f4"
   }
 ]
